--- a/src/app/pages/confirmation/confirmation.html
+++ b/src/app/pages/confirmation/confirmation.html
@@ -13,6 +13,7 @@
 
     <div class="wrapper">
         <img class="strips" src="/images/components/strips.svg" height="10" alt="" role="presentation">
+        <savings-calculator class="boxed" skip="true"></savings-calculator>
         <div class="text-content labeled-inputs row book-info">
             <div class="text-content add-another">
                 <h2 if="model.adoptionQuestion">{model.adoptionQuestion}</h2>
