Added holiday message

--- a/src/app/components/shell/sticky-note/sticky-note.html
+++ b/src/app/components/shell/sticky-note/sticky-note.html
@@ -1,9 +1,9 @@
 <template args="model">
     <if condition="model.temporary">
         <div class = "text-content container">
-            We'll perform website maintenance on Saturday, December 10 from 9 a.m.
-            - noon CST. You may briefly encounter difficulty downloading PDFs or
-            accessing our textbooks via webview.
+            OpenStax will be closed December 23 through January 2 for the Rice
+            Winter Holiday. We will respond to you when business resumes
+            January 3. Happy Holidays!
         </div>
     <else>
         <div if="model.content" class="text-content container">
