Changed Volume to Part

--- a/src/app/components/get-this-title/get-this-title.html
+++ b/src/app/components/get-this-title/get-this-title.html
@@ -68,10 +68,10 @@
                         iBook
                     </span>
                     <a href="{model.ibookLink}">
-                        Volume 1
+                        Part 1
                     </a>
                     <a href="{model.ibookLink2}">
-                        Volume 2
+                        Part 2
                     </a>
                 </div>
                 <div if="!model.ibookLink2" class="option">
