Make "Details & Resources" not wrap

--- a/src/app/pages/subjects/subjects.scss
+++ b/src/app/pages/subjects/subjects.scss
@@ -194,10 +194,11 @@
             }
 
             .cta > .btn {
+                font-size: 90%;
                 font-variant: normal;
                 font-weight: 400;
-                padding: 1.5rem;
                 text-transform: uppercase;
+                white-space: nowrap;
                 width: 100%;
             }
 
