Rotate arrow by "See all authors"

--- a/src/app/pages/details/details-loaded.html
+++ b/src/app/pages/details/details-loaded.html
@@ -43,7 +43,7 @@
                         </div>
                     </if>
                     <div class="links" if="model.allSenior.length || model.allNonsenior.length">
-                        <a class="go-to" href="#details">See all authors</a>
+                        <a class="go-to down-page" href="#details">See all authors</a>
                     </div>
                 </div>
             </section>
