--- a/src/app/components/shell/header/upper-menu/upper-menu.scss
+++ b/src/app/components/shell/header/upper-menu/upper-menu.scss
@@ -49,7 +49,6 @@
         }
 
         .dropdown > a {
-            display: block;
             margin-bottom: 1.1rem;
         }
 
@@ -110,6 +109,7 @@
 
         .chevron {
             fill: color(cyan);
+            height: 1rem;
             margin-left: 0.5em;
             width: 0.6rem;
 
