Fix filter spacing and scroll speed on Partners and Subjects

--- a/src/app/pages/partners/partners.scss
+++ b/src/app/pages/partners/partners.scss
@@ -38,6 +38,7 @@ $text-dark2: rgba(0, 0, 0, 0.7);
             // border: solid color(neutral-lightest) 0.15em;
             border-radius: 0.15em;
             display: block;
+            height: 100%;
             margin-top: 2rem;
             width: calc(15rem + 5%);
         }
