--- a/src/app/pages/partners/partners.html
+++ b/src/app/pages/partners/partners.html
@@ -9,33 +9,11 @@
     </div>
     <div class="icons">
         <img class="strips" src="/images/components/strips.svg" height="10" alt="" role="presentation">
-        <div id="filter" class="filter">
-            <div class="filter-buttons{model.filterButtonsActive ? ' active' : ''}">
-                <div each="button in model.filterButtons" class="filter-button{button === history.state.filter ? ' selected' : ''}"
-                data-value="{button}">{button}</div>
-            </div>
-        </div>
-        <div class="container">
-            <div each="partner in model.partners" class="logo">
-                <a class="logo-text" href="#{partner.title}-blurb">
-                    <if condition="partner.ally_bw_logo">
-                        <img src="{partner.ally_bw_logo}">
-                    <else>
-                        {partner.title}
-                    </if>
-                </a>
-            </div>
-            <div each="spacer in [1,2,3]" class="spacer logo"></div>
-        </div>
+        <div class="filter" skip="true"></div>
+        <icon-viewer skip="true"></icon-viewer>
     </div>
     <div class="divider boxed">
         <hr />
     </div>
-    <div class="blurbs container">
-        <div each="partner in model.partners" class="text" id="{partner.title+'-blurb'}">
-            <h3 data-html="partners[{$item}].title"></h3>
-            <div data-html="partners[{$item}].long_description"></div>
-            <a href="#filter" class="to-top">Return to top <i class="fa fa-chevron-up"></i></a>
-        </div>
-    </div>
+    <blurb-viewer skip="true"></blurb-viewer>
 </template>
