Style Details page resource links
Also reduce lock size

--- a/src/app/pages/details/details.scss
+++ b/src/app/pages/details/details.scss
@@ -478,7 +478,7 @@
 
                 .locked-state {
                     color: lighten(color(neutral-light), 18%);
-                    font-size: 4rem;
+                    font-size: 130%;
                     margin-right: 1rem;
                 }
             }
