--- a/src/app/components/shell/header/upper-menu/upper-menu.html
+++ b/src/app/components/shell/header/upper-menu/upper-menu.html
@@ -8,7 +8,7 @@
             <if condition="!model.user.username">
                 <a href="{model.login}" data-local="true" role="menuitem">Login</a>
             <else>
-                <a href="{model.accountLink}" data-local="true" role="menuitem">
+                <a href="{model.accountLink}" role="menuitem">
                     Hi {model.user.first_name || model.user.username}
                     <svg width="0" class="chevron" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 18 30"><title>arrow</title><path d="M12,1L26,16,12,31,8,27,18,16,8,5Z" transform="translate(-8 -1)"/></svg>
                 </a>
@@ -21,7 +21,7 @@
                     </a>
                 </li>
                 <li if="model.user && !model.user.groups.includes('Faculty')" role="presentation">
-                    <a href="{model.accountLink + '/faculty_access/apply'}" data-local="true" role="menuitem" tabindex="-1">
+                    <a href="{model.facultyAccessLink}" data-local="true" role="menuitem" tabindex="-1">
                         Request instructor access
                     </a>
                 </li>
