--- a/src/app/pages/details/resource/resource.html
+++ b/src/app/pages/details/resource/resource.html
@@ -4,7 +4,7 @@
         <resource-description if="model.resource_description" data-html="resource_description"></resource-description>
     </div>
     <span class="link-and-lock">
-        <a class="download-link go-to" href="{model.linkUrl}">{model.link_text}</a>
+        <a class="download-link go-to" data-local="{model.dataLocal}" href="{model.linkUrl}">{model.link_text}</a>
         <i if="model.showLock" class="locked-state fa {model.showLock}"></i>
     </span>
 </template>
