--- a/src/app/components/shell/sticky-note/sticky-note.html
+++ b/src/app/components/shell/sticky-note/sticky-note.html
@@ -1,13 +1,7 @@
 <template args="model">
-    <if condition="model.temporary">
-        <div class = "text-content container">
-            We'll perform website maintenance on Saturday, November 19 from 10 a.m.
-            - 1 p.m. CST. You may briefly encounter difficulty downloading PDFs or
-            accessing our textbooks via webview.
-        </div>
-    <else>
-        <div if="model.content" class="text-content container">
-            {model.content}
+    <div if="model.content" class="text-content container">
+        {model.content}
+        <if condition="!model.temporary">
             <div class="single-button">
                 <a class="btn inverted" href="/give?student">Give Now</a>
             </div>
@@ -18,6 +12,6 @@
                 <a class="btn inverted" href="/give" data-amount="50">Give $50</a>
                 <a class="btn inverted" href="/give"  data-amount="?">Give Other Amount</a>
             </div>
-        </div>
-    </if>
+        </if>
+    </div>
 </template>
