Display license text

--- a/src/app/pages/details/details-loaded.html
+++ b/src/app/pages/details/details-loaded.html
@@ -175,6 +175,7 @@
                         <div>
                             <div class="text">{model.license_name} v{model.license_version}</div>
                             <div class="extra-text"></div>
+                            <div data-html="license_text" skip="true"></div>
                         </div>
                     </td>
                 </tr>
