--- a/src/app/pages/give/give.html
+++ b/src/app/pages/give/give.html
@@ -419,6 +419,7 @@
                             <input name="AMT" type="number" min=5 value="{model.selectedAmount}" required
                             autofocus="{model.selectedAmount == '?' ? '' : null}"/>
                         </label>
+                        <p>You will have the option to set up a recurring gift with your donation amount.</p>
                         <button type="submit" class="btn btn-orange">Continue</button>
                     </div>
                 </div>
@@ -437,13 +438,6 @@
                             <div class="box-row">
                                 <div each="amount in model.amounts" class="{`amount ${model.selectedAmount === +amount ? 'selected' : ''}`}" data-value="{amount}">${amount}</div>
                                 <input type="number" class="{`amount-input ${model.otherAmount === null ? '' : 'selected'}`}" placeholder="Other amount" min="5" value="{model.otherAmount}"/>
-                            </div>
-                            <div class="recurring-section">
-                                <label>
-                                    <input type="checkbox" name="recurring-payment" value="setup" />
-                                    <div class="checkbox-proxy"> </div>
-                                    Make this a monthly donation
-                                </label>
                             </div>
                             <input class="btn" type="submit" value="donate!" />
                         </form>
