Do not update Subjects menu title after initial render

--- a/src/app/components/shell/header/main-menu/main-menu.html
+++ b/src/app/components/shell/header/main-menu/main-menu.html
@@ -12,7 +12,10 @@
 
     <ul class="nav-menu main-menu no-bullets">
         <li class="nav-menu-item dropdown" role="presentation">
-            <a href="/subjects" role="menuitem" aria-haspopup="true">Subjects<svg class="chevron" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 18 30"><title>arrow</title><path d="M12,1L26,16,12,31,8,27,18,16,8,5Z" transform="translate(-8 -1)"/></svg></a>
+            <a href="/subjects" role="menuitem" aria-haspopup="true" skip="model.initialRenderDone">
+                Subjects
+                <svg class="chevron" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 18 30"><title>arrow</title><path d="M12,1L26,16,12,31,8,27,18,16,8,5Z" transform="translate(-8 -1)"/></svg>
+            </a>
             <ul class="dropdown-menu" role="menu" aria-expanded="false" aria-label="Subjects menu">
                 <li role="presentation"><a href="/subjects" role="menuitem" tabindex="-1">All</a></li>
                 <li role="presentation"><a href="/subjects/math" role="menuitem" tabindex="-1">Math</a></li>
