--- a/src/app/pages/give/give.html
+++ b/src/app/pages/give/give.html
@@ -447,7 +447,7 @@
             </div>
         </div>
         <img class="strips" src="/images/components/strips.svg" height="10" alt="" role="presentation">
-        <div class="boxed">
+        <div class="boxed" if="model.otherPaymentHeading">
             <h2>{model.otherPaymentHeading}</h2>
             <hr />
             <div class="row">
