Fix capitalization in footer tagline

--- a/src/app/components/shell/footer/footer.html
+++ b/src/app/components/shell/footer/footer.html
@@ -1,6 +1,6 @@
 <template args="model">
     <div class="boxed">
-        <div class="hero-quote">Access. <span class="narrow-block">The Future of Education.</span></div>
+        <div class="hero-quote">Access. <span class="narrow-block">The future of education.</span></div>
 
         <div class="copyright">
             <ul class="no-bullets">
