--- a/src/app/pages/blog/blog.html
+++ b/src/app/pages/blog/blog.html
@@ -3,14 +3,11 @@
     <div class="pinned"></div>
 </div>
 <div class="articles">
-    <div class="boxed">
-        <div class="search">
-            <h2>Read more great stories</h2>
-        </div>
-        <div class="container"></div>
-    </div>
     <div class="update-box">
-        <h2>Get updates in your inbox</h2>
+        <h3>Get updates in your inbox.</h3>
         <a class="btn cta" href="http://www2.openstax.org/l/218812/2016-10-04/lvk">Sign Up</a>
+    </div>
+    <div class="boxed">
+        <div class="container"></div>
     </div>
 </div>
