--- a/src/app/pages/blog/article/article.scss
+++ b/src/app/pages/blog/article/article.scss
@@ -7,205 +7,245 @@
     }
 }
 
-.article {
-    display: flex;
-    flex-flow: row wrap;
-    margin-bottom: 3rem;
-
-    &.page .article {
-        width: 100%;
-
-        .boxed {
-            max-width: 64rem;
-        }
-
-        .quote {
-            background-color: lighten(color(neutral-lighter), 8%);
-            padding: 1rem 3rem;
-        }
-
-        figcaption {
-            font-size: 80%;
-        }
-
-        .tags {
-            display: flex;
-
-            .tag {
-                @include constrained-variable-text(1.4, 0.16);
-                background-color: lighten(color(neutral-lighter), 8%);
-                color: lighten(color(neutral-dark), 8%);
-                margin-right: 1.5rem;
-                padding: 0.35em 1.1em;
-            }
-        }
-    }
-
-    h2 {
-        font-size: 2.1rem;
-        letter-spacing: 0;
-        line-height: 2.6rem;
-
-        @include desktop {
-            margin-top: 0;
-        }
-
-        a {
-            color: inherit;
-
-            &:hover {
-                text-decoration: underline;
-            }
-        }
-    }
-
-    h3 {
-        font-size: 1.6rem;
-    }
-
-    .img {
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: cover;
-        flex-basis: 100%;
-        height: 24rem;
-    }
-
-    .content {
+.blog.page {
+    .article {
+        align-content: flex-start;
         display: flex;
-        flex-basis: 100%;
-        flex-direction: column;
-        justify-content: space-between;
-        max-width: 100%;
-    }
+        flex-flow: row wrap;
+        margin-bottom: 3rem;
 
-    .meta {
-        color: color(neutral-light);
-    }
-
-    .author {
-        color: color(cyan);
-        font-style: italic;
-    }
-}
-
-.pinned .article {
-    flex-flow: row wrap;
-    padding: 3rem 0 0;
-
-    @include desktop {
-        flex-flow: row nowrap;
-        margin-bottom: 0;
-        padding: 8rem 0;
-    }
-
-    h2 {
-        @include desktop {
-            font-size: 3.6rem;
-            letter-spacing: -0.2rem;
-            line-height: 4rem;
-        }
-    }
-
-    h3 {
-        @include desktop {
-            font-size: 2.1rem;
-        }
-    }
-
-    .img {
-        flex-basis: 100%;
-        height: 27rem;
-
-        @include desktop {
-            flex-basis: 50%;
-            margin-right: 3rem;
-        }
-    }
-
-    img {
-        width: 100%;
-    }
-
-    .content {
-        flex-basis: 100%;
-
-        @include desktop {
-            flex-basis: 50%;
-        }
-    }
-}
-
-
-.articles .container {
-
-    > .article {
-        // align-items: flex-start;
-        background-color: color(neutral-lightest);
-        display: block;
-        flex-basis: 100%;
-        max-width: 100%;
-
-        @include desktop {
-            flex-basis: calc(50% - 3rem);
-            margin: 1.5rem;
-            max-width: calc(50% - 3rem);
+        > .article {
+            height: 100%;
+            margin-bottom: 0;
         }
 
-        @media (min-width: $boxed-width) {
-            flex-basis: calc(33% - 2.6rem);
-            max-width: calc(33% - 2.6rem);
-        }
+        &.page .article {
+            width: 100%;
 
-        /* one article */
-        &:first-child:nth-last-child(1) {
-            flex-basis: 100%;
-        }
-
-        /* two articles */
-        &:first-child:nth-last-child(2),
-        &:first-child:nth-last-child(2) ~ div {
-            @include desktop {
-                flex-basis: calc(50% - 3rem);
+            .boxed {
+                max-width: 64rem;
             }
+
+            .quote {
+                background-color: lighten(color(neutral-lighter), 8%);
+                padding: 1rem 3rem;
+            }
+
+            figcaption {
+                font-size: 80%;
+            }
+
+            .tags {
+                display: flex;
+
+                .tag {
+                    @include constrained-variable-text(1.4, 0.16);
+                    background-color: lighten(color(neutral-lighter), 8%);
+                    color: lighten(color(neutral-dark), 8%);
+                    margin-right: 1.5rem;
+                    padding: 0.35em 1.1em;
+                }
+            }
+        }
+
+        h2 {
+            font-size: 2.1rem;
+            letter-spacing: 0;
+            line-height: 2.6rem;
+
+            @include desktop {
+                margin-top: 0;
+            }
+
+            a {
+                color: inherit;
+
+                &:hover {
+                    text-decoration: underline;
+                }
+            }
+        }
+
+        h3 {
+            font-size: 1.6rem;
+        }
+
+        .img {
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: cover;
+            flex-basis: 100%;
+            height: 24rem;
         }
 
         .content {
+            display: flex;
+            flex-direction: column;
+            height: 32rem;
+        }
 
-            flex-basis: 100%;
+        .excerpt {
+            column-width: 57em;
+            overflow: hidden;
 
             @include desktop {
-                padding: 1.5rem;
+                height: 100%;
+            }
+        }
+
+        .meta {
+            color: color(neutral-light);
+
+            p {
+                margin: 0;
+                position: relative;
+            }
+        }
+
+        .author {
+            color: color(cyan);
+            font-style: italic;
+        }
+    }
+
+    .pinned .article {
+        flex-flow: row wrap;
+        padding: 3rem 0 0;
+        width: 100%;
+
+        @include desktop {
+            flex-flow: row nowrap;
+            margin-bottom: 0;
+            padding: 2.5rem 0;
+        }
+
+        h2 {
+            @include desktop {
+                font-size: 3.6rem;
+                letter-spacing: -0.2rem;
+                line-height: 4rem;
+            }
+        }
+
+        h3 {
+            @include desktop {
+                font-size: 2.1rem;
+            }
+        }
+
+        .body {
+            font-size: 1.8rem;
+        }
+
+        .img {
+            background-size: cover;
+            flex-basis: 100%;
+            height: 32rem;
+
+            @include desktop {
+                flex-basis: 50%;
+                margin-right: 3rem;
+            }
+        }
+
+        img {
+            width: 100%;
+        }
+
+        .content {
+            flex-basis: 100%;
+            max-width: 100%;
+
+            @include desktop {
+                flex-basis: 50%;
+                max-width: 50%;
             }
         }
     }
-}
 
-.pinned .article,
-.articles .article {
+
+    .articles .container {
+
+        > .article {
+            // align-items: flex-start;
+            background-color: color(neutral-lightest);
+            display: block;
+            flex-basis: 100%;
+            max-width: 100%;
+
+            @include desktop {
+                flex-basis: calc(50% - 3rem);
+                margin: 1.5rem;
+                max-width: calc(50% - 3rem);
+            }
+
+            @media (min-width: $boxed-width) {
+                flex-basis: calc(33% - 2.6rem);
+                max-width: calc(33% - 2.6rem);
+            }
+
+            /* one article */
+            &:first-child:nth-last-child(1) {
+                flex-basis: 100%;
+            }
+
+            /* two articles */
+            &:first-child:nth-last-child(2),
+            &:first-child:nth-last-child(2) ~ div {
+                @include desktop {
+                    flex-basis: calc(50% - 3rem);
+                }
+            }
+
+            .content {
+
+                flex-basis: 100%;
+                max-width: 100%;
+
+                @include desktop {
+                    padding: 1.5rem;
+                }
+            }
+        }
+    }
+
+    .go-to {
+        font-size: 1.2rem;
+        text-transform: uppercase;
+    }
+
+    .pinned .go-to {
+        font-size: 1.4rem;
+    }
+
     .body {
-        font-size: 1.6rem;
-        height: 8em;
-        line-height: 2.5rem;
-        overflow: hidden;
+        column-width: 100%;
+        line-height: 1.5;
         position: relative;
 
-        .quote-bucket,
-        iframe {
-            height: 0;
-            overflow: hidden;
-            width: 0;
+        @include phone {
+            font-size: 1.5rem;
         }
 
-        &::after {
-            background: linear-gradient(to bottom, rgba(255, 255, 255, 0), white 60%);
-            bottom: -3rem;
-            content: '';
-            height: 8rem;
-            position: absolute;
-            right: 0;
-            text-align: right;
-            width: 100%;
+        > div > * {
+            display: none;
         }
+
+        > div > :first-child {
+            display: block;
+        }
+    }
+
+    .pinned .article,
+    .articles .article {
+        a:hover {
+            color: color(cyan);
+            text-decoration: none;
+        }
+    }
+
+    .meta .btn {
+        font-size: 1.2rem;
+        padding: 0.3em 1em;
     }
 }
