--- a/src/app/pages/blog/article/article.scss
+++ b/src/app/pages/blog/article/article.scss
@@ -86,11 +86,8 @@
 
         .excerpt {
             column-width: 57em;
+            height: 100%;
             overflow: hidden;
-
-            @include desktop {
-                height: 100%;
-            }
         }
 
         .meta {
@@ -113,7 +110,7 @@
         padding: 3rem 0 0;
         width: 100%;
 
-        @include desktop {
+        @include wide-desktop {
             flex-flow: row nowrap;
             margin-bottom: 0;
             padding: 2.5rem 0;
@@ -142,7 +139,7 @@
             flex-basis: 100%;
             height: 32rem;
 
-            @include desktop {
+            @include wide-desktop {
                 flex-basis: 50%;
                 margin-right: 3rem;
             }
@@ -156,7 +153,7 @@
             flex-basis: 100%;
             max-width: 100%;
 
-            @include desktop {
+            @include wide-desktop {
                 flex-basis: 50%;
                 max-width: 50%;
             }
