--- a/src/app/pages/about/about.html
+++ b/src/app/pages/about/about.html
@@ -13,9 +13,8 @@
 
     <div class="meta">
         <div class="boxed">
-            <h2>{model.introHeading}</h2>
-            {model.introParagraph}
-            <p><a href="/faq">{model.faqLink}</a></p>
+            <h2>{model.introHeading}</h
+            <p data-html="intro_paragraph" skip="true"></p>
         </div>
     </div>
 
