Fixed typo and removed debug stmts

--- a/src/app/pages/about/about.html
+++ b/src/app/pages/about/about.html
@@ -13,8 +13,8 @@
 
     <div class="meta">
         <div class="boxed">
-            <h2>{model.introHeading}</h
-            <p data-html="intro_paragraph" skip="true"></p>
+            <h2>{model.introHeading}</h2>
+            <p data-html="introParagraph" skip="true"></p>
         </div>
     </div>
 
