--- a/src/app/pages/blog/blog.scss
+++ b/src/app/pages/blog/blog.scss
@@ -44,6 +44,10 @@
             }
         }
 
+        &.hidden {
+            display: none;
+        }
+
         .hero {
             background-position: 60% 40%;
             background-repeat: no-repeat;
