Aboutus modified for rich text intro paragraph (#712)
* Intro paragraph is rich text

* Fixed typo and removed debug stmts

* Fixed lint error

--- a/src/app/pages/about/about.html
+++ b/src/app/pages/about/about.html
@@ -14,8 +14,7 @@
     <div class="meta">
         <div class="boxed">
             <h2>{model.introHeading}</h2>
-            {model.introParagraph}
-            <p><a href="/faq">{model.faqLink}</a></p>
+            <p data-html="introParagraph" skip="true"></p>
         </div>
     </div>
 
