--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -90,6 +90,7 @@ sup {
     font-weight: 500;
     text-transform: uppercase;
 
+    &.unavailable,
     &:hover {
         color: darken(color(cyan), 10%);
     }
