--- a/src/app/pages/give/give.html
+++ b/src/app/pages/give/give.html
@@ -436,8 +436,12 @@
                     <div class="amount-boxes">
                         <form class="preform">
                             <div class="box-row">
-                                <div each="amount in model.amounts" class="{`amount ${model.selectedAmount === +amount ? 'selected' : ''}`}" data-value="{amount}">${amount}</div>
-                                <input type="number" class="{`amount-input ${model.otherAmount === null ? '' : 'selected'}`}" placeholder="Other amount" min="5" value="{model.otherAmount}"/>
+                                <div each="amount in model.amounts"
+                                 class="{`amount ${model.selectedAmount === +amount ? 'selected' : ''}`}"
+                                 data-value="{amount}">${amount}</div>
+                                <input type="number"
+                                 class="{`amount-input ${model.otherAmount === null ? '' : 'selected'}`}"
+                                 placeholder="Other amount" min="5" value="{model.otherAmount}"/>
                             </div>
                             <input class="btn" type="submit" value="donate!" />
                         </form>
