Alt text for book covers
Also fixed errata title and changed heading tags on book viewer

--- a/src/app/pages/subjects/book-viewer/category-section/book/book.html
+++ b/src/app/pages/subjects/book-viewer/category-section/book/book.html
@@ -1,5 +1,5 @@
 <template args="model">
-    <img src="{model.coverUrl}" alt="book cover">
+    <h3><img src="{model.coverUrl}" alt="{model.title}"></h3>
     <div class="details {model.detailsOpenClass}">
         <div class="get-this-title-container" skip="true"></div>
         <div class="cta">
