--- a/src/app/pages/subjects/subjects.scss
+++ b/src/app/pages/subjects/subjects.scss
@@ -112,6 +112,7 @@
 
             .subject {
                 color: color(gray);
+                font-size: 2.5rem;
                 font-style: italic;
                 font-weight: 300;
             }
