--- a/src/app/pages/errata/form/form.html
+++ b/src/app/pages/errata/form/form.html
@@ -1,5 +1,7 @@
 <template args="model">
-    <form class="body-block" method="post" action="{model.postEndpoint}" enctype="multipart/form-data">
+    <iframe name="form-target" class="hidden"></iframe>
+    <form class="body-block" method="post" action="{model.postEndpoint}"
+     enctype="multipart/form-data" target="_blank">
         <div class="question">Wrong subject? Select a different subject.</div>
         <div skip="true"></div>
         <select name="book">
@@ -15,7 +17,7 @@
                 <input type="radio" name="error_type" value="{eType}" required/>
                 <span class="proxy"></span>
                 {eType}
-                <input if="eType === 'Other'" type="text" name="otherError" maxlength="250" />
+                <input if="eType === 'Other' && model.selectedError === 'Other'" type="text" name="error_type_other" maxlength="250" />
             </label>
         </div>
         <div class="helpbox {model.helpBoxVisible()}">
@@ -26,12 +28,12 @@
         <div class="radio-columns">
             <span class="invalid-message">{model.validationMessage('source')}</span>
             <label each="sType in model.sourceTypes">
-                <input type="radio" name="source" value="{sType}"
+                <input type="radio" name="resource" value="{sType}"
                  checked="{model.selectedSource === sType ? '' : null}" required/>
                 <span class="proxy"></span>
                 {sType}
                 <span if="sType in model.subnotes" class="subnote"><br>{model.subnotes[sType]}</span>
-                <input if="sType === 'Other'" type="text" name="otherSource" maxlength="250" />
+                <input if="sType === 'Other' && model.selectedSource === 'Other'" type="text" name="resource_other" maxlength="250" />
             </label>
         </div>
         <div class="question">Where did you find this error?</div>
@@ -46,11 +48,19 @@
         <span class="invalid-message">{model.validationMessage('source')}</span>
         <textarea maxlength="1000" name="detail" required></textarea>
         <div class="question">Please add a screenshot or any other file that helps explain the error.</div>
-        <div>
+        <div class="file-button">
             <label class="btn">
                 Add file
-                <input type="file" class="hidden" name="file" class="btn" />
+                <input type="file" class="hidden" name="file_1" class="btn" />
             </label>
+            <span if="model.file1" class="file-name">{model.file1}</span>
+        </div>
+        <div if="model.file1" class="file-button">
+            <label class="btn">
+                Add another file
+                <input type="file" class="hidden" name="file_2" class="btn" />
+            </label>
+            <span if="model.file2" class="file-name">{model.file2}</span>
         </div>
         <div>
             <input type="submit" class="btn" />
